Separated content in diferents files and folders

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[hoptionsi]{acmart}
 \usepackage[utf8]{inputenc}
 \usepackage{float}
+
 \title{Nombre del proyecto}
 \author{director }
 \date{Fecha}
@@ -8,51 +9,14 @@
 \begin{document}
 
 \maketitle
-
-\section{Introducción}
-\section{Propósito y justificación del proyecto}
-\section{Alcance}
-\section{Marco teórico}
-\section{Descripción del proyecto}
-\subsection{Objetivos}
-\begin{itemize}
-    \item Alcance
-    \item Cronograma 
-    \item Indicador de éxito
-\end{itemize}
-\subsection{Entrégables}
-\subsection{Premisas y restricciones}
-\subsection{Riesgos iniciales de alto nivel}
-\subsection{Cronogramas de hitos principales}
-
-\begin{table}[h]
-\begin{tabular}{|l|l|}
-\hline
-\textbf{Hito} & \textbf{Fecha tope} \\ \hline
-              &                     \\ \hline
-\end{tabular}
-\end{table}
-
-\section{Resumen del proyecto}
-
-\begin{table}[H]
-\begin{tabular}{|l|l|l|l|l|}
-\hline
-Objetivo & Actividades & \begin{tabular}[c]{@{}l@{}}Fechas de\\ inicio y fin\end{tabular} & Responsable & \begin{tabular}[c]{@{}l@{}}Indicadores\\ de éxito\end{tabular} \\ \hline
-& &  &  &  \\ \hline
-
-\end{tabular}
-\end{table}
-
-
-\section{Recursos}
-\subsection{Humanos}
-\subsection{Infraestructura}
-\subsection{Materiales y equipos}
-\subsection{Otros}
-\section{Requisitos de apreciación del proyecto}
-\section{Criterios de cierre o cancelación}
-
-
+\input{contenido/introduccion.tex}
+\input{contenido/justificacion.tex}
+\input{contenido/alcance.tex}
+\input{contenido/marcoTeorico.tex}
+\input{contenido/descripcion.tex}
+\input{contenido/resumen.tex}
+\input{contenido/recursos.tex}
+\input{contenido/apreciacion.tex}
+\input{contenido/criteriosFinales.tex}
 
 \end{document}
